--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,63 @@
-/*  your css code here. If applicable */
+body{
+	background-color: rgb(204, 204, 204)
+}
+h1{
+	text-align: center
+}
+h2{
+	text-align:center;
+}
+ul{
+	background-color:white;
+	border:1px solid;
+	border-radius:10px;
+	padding-left:20px;
+}
+li{
+	list-style-type: none
+}
+a{
+	text-decoration-line: none;
+	color:black;
+}
+
+.container1{
+	background-color:white;
+	border:2px solid black;
+	border-radius:8px;
+	width:90%;
+	display:flex;
+	flex-direction:column;
+	padding:0px;
+	margin:auto;
+
+}
+.container2{
+	background-color:white;
+	border:2px solid black;
+	border-radius:8px;
+	width:80%;
+	display:flex;
+	flex-direction:column;
+	align-content:center;
+	padding:2%;
+	margin:auto;
+}
+.player_one{
+	align-items: center;
+	background-color: rgb(255, 255, 255);  
+	padding:10px;
+	border:2px solid;
+	border-radius:10px;
+	background-color:white;
+	padding:0px;
+	border-radius:5px;
+}
+.player_two{
+	background-color:white;
+	padding:0px;
+	border-radius:5px;
+}
+audio{
+	width:100%;
+}
